objects/DOW_Report_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Document_Folder__c</fullName>
        <label>Document Folder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To_Contact__c</fullName>
        <label>Email To Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_template__c</fullName>
        <label>Email template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmail__c</fullName>
        <label>OrgWideEmail</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>DOW Report Setting</label>
</CustomObject>